--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"> 
   <title>Muri</title>
-  <link rel="shortcut icon" href="assets/image/favicon.png" type="image/png">=
+  <link rel="shortcut icon" href="assets/image/favicon.png" type="image/png">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
