--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="ar">
+
 <head>
-  <meta charset="utf-8"> 
+  <meta charset="utf-8">
   <title>Muri</title>
   <link rel="shortcut icon" href="assets/image/favicon.png" type="image/png">
   <base href="/">
@@ -10,9 +11,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/fonts/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/primeng@19/themes/aura-light-blue/theme.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/primeicons@7/primeicons.css">
+
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
